[gd_scene load_steps=9 format=3 uid="uid://cjty5hynqofyh"]

[ext_resource type="PackedScene" uid="uid://chp3bd6blfvcj" path="res://scenes/interface/casino_minigames/casino_window.tscn" id="1_6lqtw"]
[ext_resource type="Script" uid="uid://gs31u7ixogkd" path="res://scripts/info_popup_window.gd" id="2_fly66"]
[ext_resource type="FontFile" uid="uid://v0jxcl38ttwu" path="res://resources/fonts/good timing bd.otf" id="4_ftava"]
[ext_resource type="Texture2D" uid="uid://flq7ab6bhtyy" path="res://resources/images/casino/rug_seamless_texture_contrast_dark.png" id="4_rlwqh"]

[sub_resource type="Shader" id="Shader_dbr32"]
resource_local_to_scene = true
code = "shader_type canvas_item;

/* ================= SCROLL SETTINGS ================= */

uniform float scroll_speed : hint_range(0, 2) = 0.08;
uniform float angle_degrees : hint_range(0, 360) = 45.0;
uniform float repeat_x : hint_range(0.1, 20) = 1.2;
uniform float repeat_y : hint_range(0.1, 20) = 1.2;
uniform sampler2D texture_to_scroll;

/* ================= GLITCH SETTINGS ================= */

uniform float glitch_chance : hint_range(0.0, 1.0) = 0.02;
uniform float glitch_speed = 7.0;
uniform float slice_density = 14.0;
uniform float slice_strength = 0.38;
uniform float shake_strength = 0.02;
uniform float chroma_offset = 0.016;
uniform float noise_strength = 0.2;
uniform float color_flash_strength = 0.4;
uniform float scanline_strength = 0.18;
uniform float local_warp_strength = 0.14;
uniform float flip_chance : hint_range(0.0,1.0) = 0.05;

/* ================= RANDOM ================= */

float rand(float x) { 
	return fract(sin(x * 143758.5453) * 43758.5453); 
}

float rand2(vec2 p) { 
	return fract(sin(dot(p, vec2(127.1,311.7))) * 43758.5453); 
}

/* ================= FRAGMENT ================= */

void fragment() {

	/* ---------- TEXTURE SCROLL ---------- */

	float angle_rad = radians(angle_degrees);
	vec2 direction = vec2(cos(angle_rad), sin(angle_rad));

	vec2 uv = UV - (TIME * scroll_speed * direction);

	float row = fract(floor(uv.y * repeat_y) * 0.5);

	vec2 scaled_uv = vec2(
		fract(uv.x * repeat_x),
		fract(uv.y * repeat_y)
	);

	vec2 texel_size = vec2(1.0) / vec2(textureSize(texture_to_scroll, 0));
	vec2 snapped_uv = round(scaled_uv / texel_size) * texel_size;

	/* ---------- GLITCH TRIGGER ---------- */

	float glitch = step(1.0 - glitch_chance, rand(floor(TIME * glitch_speed)));

	/* ---------- SLICE EFFECT ---------- */

	float slice_id = floor(snapped_uv.y * slice_density + rand(floor(TIME)));
	float slice_rand = rand(slice_id + floor(TIME * glitch_speed));
	float slice_mask = step(0.5, slice_rand) * glitch;

	if (rand(slice_id * TIME) < flip_chance) {
		snapped_uv.x = 1.0 - snapped_uv.x;
	}

	snapped_uv.x += (slice_rand - 0.5) * slice_strength * slice_mask;

	/* ---------- MICRO JITTER ---------- */

	float jitter = step(0.85, rand(TIME * 12.0)) * glitch;
	snapped_uv.x += (rand(TIME * 3.0) - 0.5) * 0.08 * jitter;

	/* ---------- LOCAL WARP ---------- */

	float warp_zone = step(0.65, rand2(vec2(slice_id, TIME)));
	snapped_uv +=
		(vec2(rand2(snapped_uv + TIME), rand2(snapped_uv - TIME)) - 0.5)
		* local_warp_strength * warp_zone * glitch;

	/* ---------- GLOBAL SHAKE ---------- */

	snapped_uv += vec2(
		rand(TIME * 1.3) - 0.5,
		rand(TIME * 1.7) - 0.5
	) * shake_strength * glitch;

	/* ---------- BASE SAMPLE ---------- */

	vec4 base = texture(texture_to_scroll, snapped_uv);

	/* ---------- CHROMATIC SPLIT ---------- */

	float r = texture(texture_to_scroll, snapped_uv + vec2(chroma_offset * glitch, 0.0)).r;
	float b = texture(texture_to_scroll, snapped_uv - vec2(chroma_offset * glitch, 0.0)).b;
	vec3 color = vec3(r, base.g, b);

	/* ---------- DIGITAL NOISE ---------- */

	color += (rand2(snapped_uv * TIME * 1.5) - 0.5) * noise_strength * glitch;

	/* ---------- SCANLINE DROP ---------- */

	float scan = step(0.9, rand(snapped_uv.y * 100.0 + TIME * 10.0));
	color *= 1.0 - scan * scanline_strength * glitch;

	/* ---------- COLOR FLASH ---------- */

	vec3 flash_color = vec3(
		step(0.5, rand(TIME + 0.1)),
		step(0.5, rand(TIME + 3.1)),
		step(0.5, rand(TIME + 6.1))
	);

	color = mix(
		color,
		flash_color,
		rand(TIME * 4.0) * color_flash_strength * glitch
	);
	
	vec2 p = FRAGCOORD.xy - SCREEN_UV.xy / SCREEN_PIXEL_SIZE;

	COLOR = vec4(color, base.a);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kyvrb"]
resource_local_to_scene = true
shader = SubResource("Shader_dbr32")
shader_parameter/scroll_speed = 0.11
shader_parameter/angle_degrees = 135.0
shader_parameter/repeat_x = 1.4
shader_parameter/repeat_y = 1.4
shader_parameter/texture_to_scroll = ExtResource("4_rlwqh")
shader_parameter/glitch_chance = 0.02
shader_parameter/glitch_speed = 7.0
shader_parameter/slice_density = 14.0
shader_parameter/slice_strength = 0.38
shader_parameter/shake_strength = 0.02
shader_parameter/chroma_offset = 0.016
shader_parameter/noise_strength = 0.2
shader_parameter/color_flash_strength = 0.4
shader_parameter/scanline_strength = 0.18
shader_parameter/local_warp_strength = 0.14
shader_parameter/flip_chance = 0.05

[sub_resource type="LabelSettings" id="LabelSettings_n7cb2"]
font = ExtResource("4_ftava")
font_size = 18
font_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.156863)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_06kx2"]
font = ExtResource("4_ftava")
font_size = 13
font_color = Color(0, 0, 0, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[node name="MessagePopupWindow" instance=ExtResource("1_6lqtw")]
anchor_right = 0.135937
anchor_bottom = 0.15463
script = ExtResource("2_fly66")
lifetime = 4.0
message = "Informational Message"
forced_position = false

[node name="Background" parent="Panel" index="0"]
material = SubResource("ShaderMaterial_kyvrb")
texture = ExtResource("4_rlwqh")

[node name="ColorRect" type="ColorRect" parent="Contents" index="1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02682
anchor_top = 0.449101
anchor_right = 0.946364
anchor_bottom = 0.832333
offset_left = -0.25
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(115.5, 27)
mouse_filter = 2
color = Color(0.12549, 0.733333, 0.788235, 0.705882)
metadata/_edit_use_anchors_ = true

[node name="LabelMessage" type="Label" parent="Contents/ColorRect" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "SHIELDS RESTORED"
label_settings = SubResource("LabelSettings_n7cb2")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ColorRectMessage" type="ColorRect" parent="Contents" index="2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.306515
anchor_top = 0.155688
anchor_right = 0.662838
anchor_bottom = 0.2994
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(46.5, 12)
mouse_filter = 2
color = Color(0.12549, 0.733333, 0.788235, 0.705882)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Contents/ColorRectMessage" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(123, 8.5)
text = "MESSAGE"
label_settings = SubResource("LabelSettings_06kx2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="Contents/ColorRectMessage" index="1"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0645161
anchor_top = -0.208333
anchor_right = 1.06452
anchor_bottom = 1.20833
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(81, 10.5)
mouse_filter = 2
color = Color(0, 0, 0, 0.862745)
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="." index="3"]
wait_time = 4.0
autostart = true

[connection signal="window_opened" from="." to="." method="_on_window_opened"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
